# Ludum-Dare-51

./: .gitmodules  CMakeLists.txt  README.md  dist_create.sh  win_build.sh
include/: Gamelevel.hpp  ResourceLoader.hpp
res/: .player.png-autosave.kra
res/diamond/: .diamond.png-autosave.kra  diamond.kra
res/fonts/fortzilla/: info.txt
res/levels/level_1/: level1.kra
res/levels/level_2/: level2.kra
res/levels/level_3/: level3.kra
res/levels/level_4/: level4.kra
res/levels/level_5/: level5.kra
res/levels/level_6/: level6.kra
res/levels/test_level/: krita_project.kra
src/: gamelevel.cpp  main.cpp  resourceloader.cpp
